# EsTurn

./: package.json  pnpm-lock.yaml  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src/apis/: article.ts  common.ts  files.ts
src/assets/iconfont/: iconfont.css
src/components/: document.vue  filedialog.vue  foler.vue  music.vue  other.vue  picture.vue  titleBar.vue  uploading.vue  video.vue
src/layout/: index.vue
src/layout/components/: AppMain.vue  Header.vue  Sidebar.vue
src/route/: index.ts
src/stores/: user.ts
src/style/: login.css
src/utils/: axiosreq.ts  common.ts  encode.ts  index.ts  request.ts  update.ts
src/views/cloudflare/: index.vue
src/views/files/: index.vue
src/views/help/: index.vue
src/views/login/: index.vue
src/views/setting/: index.vue
src/views/setting/component/: base.vue  image.vue
src/views/share/: index.vue
src/views/sqlite/: index.vue
src/views/supabase/: index.vue
